# PersonaSplit

./: .dockerignore  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
src/app/: main.py
src/core/: memory_client.py
src/core/agents/: agent.py  orchestration.py
src/core/presets/: presets.yaml
src/core/prompts/: prompts.yaml
src/core/schemas/: state.py
src/utils/: loaders.py  logger.py
tests/: __init__.py  test_basic.py
