[project]
name = "personasplit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.22.0",
    "asyncio>=4.0.0",
    "groq>=0.33.0",
    "huggingface>=0.0.1",
    "langchain>=1.0.2",
    "langchain-cohere>=0.5.0",
    "langchain-community>=0.4",
    "langchain-groq>=1.0.0",
    "langchain-postgres>=0.0.16",
    "langgraph>=1.0.1",
    "postgres>=4.0",
    "pydantic>=2.11.10",
    "python-dotenv>=1.1.1",
    "pyyaml>=6.0.3",
    "sentence-transformers>=5.1.2",
    "sqlalchemy>=2.0.44",
    "transformers>=4.57.1",
]
